--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   },
   "homepage": "https://github.com/Kiasoh/middle-worker#readme",
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "axios": "^1.11.0",
+    "firebase": "^12.0.0",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250805.0",
     "@types/dotenv": "^6.1.1",
+    "@types/firebase": "^2.4.32",
     "@types/node": "^24.2.0",
     "@types/node-fetch": "^2.6.13",
     "dotenv": "^17.2.1",
